--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "ng-material-treetable",
+  "name": "@valispace/ng-material-treetable",
   "description": "A customisable Angular Material TreeTable component",
+  "repository": "git://github.com/valispace/ng-material-treetable.git",
   "version": "0.5.5",
   "scripts": {
     "ng": "ng",
