--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@valispace/ng-material-treetable",
   "description": "A customisable Angular Material TreeTable component",
-  "repository": "git://github.com/valispace/ng-material-treetable.git",
+  "repository": {
+    "type": "git",
+    "url": "ssh://git@github.com/valispace/ng-material-treetable.git"
+  },
   "version": "0.5.5",
   "scripts": {
     "ng": "ng",
@@ -10,8 +13,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "packagr": "ng-packagr -p ng-package.json",
-    "postinstall": "npm rebuild node-sass"
+    "packagr": "ng-packagr -p ng-package.json"
   },
   "author": {
     "name": "Marco Levrero",
@@ -25,19 +27,19 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.12.2",
-    "@angular/animations": "^7.2.1",
-    "@angular/cdk": "^7.2.1",
-    "@angular/cli": "^7.2.2",
-    "@angular/common": "^7.2.1",
-    "@angular/compiler": "^7.2.1",
-    "@angular/compiler-cli": "^7.2.1",
-    "@angular/core": "^7.2.1",
-    "@angular/elements": "^7.0.2",
-    "@angular/flex-layout": "^7.0.0-beta.21",
-    "@angular/forms": "^7.2.1",
-    "@angular/material": "^7.0.2",
-    "@angular/platform-browser": "^7.2.1",
-    "@angular/platform-browser-dynamic": "^7.2.1",
+    "@angular/animations": "^8.2.5",
+    "@angular/cdk": "^8.2.3",
+    "@angular/cli": "^8.3.24",
+    "@angular/common": "8.2.5",
+    "@angular/compiler": "8.2.5",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/core": "8.2.5",
+    "@angular/elements": "^8.2.5",
+    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/forms": "8.2.5",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "8.2.5",
+    "@angular/platform-browser-dynamic": "8.2.5",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash-es": "^4.17.3",
@@ -55,6 +57,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.4",
     "ng-packagr": "^4.4.0",
+    "node-sass": "^4.13.1",
     "phantomjs-prebuilt": "^2.1.16",
     "protractor": "~5.4.0",
     "puppeteer": "^1.20.0",
