--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "git",
     "url": "ssh://git@github.com/valispace/ng-material-treetable.git"
   },
-  "version": "0.5.5.vali",
+  "version": "0.5.5-valispace",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
