Attempt 3 to publish this f*ckin sh*t

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "git",
     "url": "ssh://git@github.com/valispace/ng-material-treetable.git"
   },
-  "version": "0.5.5-valispace.2",
+  "version": "0.5.5-valispace.3",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -26,7 +26,7 @@
     "lodash-es": "^4.17.15"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.24",
+    "@angular-devkit/build-angular": "^0.803.26",
     "@angular/animations": "^8.2.5",
     "@angular/cdk": "^8.2.3",
     "@angular/cli": "^8.3.24",
@@ -41,33 +41,33 @@
     "@angular/platform-browser": "8.2.5",
     "@angular/platform-browser-dynamic": "8.2.5",
     "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.8",
     "@types/lodash-es": "^4.17.3",
-    "@types/node": "^8.10.39",
-    "@types/uuid": "^3.4.4",
+    "@types/node": "^8.10.60",
+    "@types/uuid": "^3.4.9",
     "codelyzer": "~4.5.0",
-    "core-js": "^2.5.4",
-    "document-register-element": "^1.7.2",
+    "core-js": "^2.6.11",
+    "document-register-element": "^1.14.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.4",
     "ng-packagr": "^4.4.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.0",
     "phantomjs-prebuilt": "^2.1.16",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.4",
     "puppeteer": "^1.20.0",
     "rxjs": "~6.3.3",
     "ts-node": "~7.0.0",
     "tsickle": "^0.33.1",
     "tslint": "~5.11.0",
     "typescript": "~3.4.5",
-    "uuid": "^3.3.2",
-    "webpack-dev-server": "^3.1.14",
+    "uuid": "^3.4.0",
+    "webpack-dev-server": "^3.10.3",
     "zone.js": "~0.8.26"
   },
   "keywords": [
